# orderbook

./: .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo_machete.yml  cargo_test.yml  release-please.yml  rustsec_audit.yml
benches/: orderbook.rs  orderbook_decimal.rs  orderbook_fixed_decimal.rs
src/: array_orderbook.rs  btree_orderbook.rs  buffer.rs  event.rs  event_kind.rs  fixed_decimal.rs  fixed_decimal_macro.rs  interface.rs  level.rs  lib.rs  metrics.rs  side.rs
src/books/: array_orderbook.rs  btree_orderbook.rs  interface.rs  mod.rs
src/buffers/: buffer.rs  mod.rs  reversed_vec.rs
src/decimals/: decimal_type.rs  fixed_decimal.rs  fixed_decimal_macro.rs  mod.rs
src/snapshots/: crypto_orderbook__array_orderbook__test__bbo-2.snap  crypto_orderbook__array_orderbook__test__bbo-3.snap  crypto_orderbook__array_orderbook__test__bbo-4.snap  crypto_orderbook__array_orderbook__test__bbo.snap  crypto_orderbook__array_orderbook__test__lv2-2.snap  crypto_orderbook__array_orderbook__test__lv2.snap  crypto_orderbook__array_orderbook__test__orderbook_metrics.snap  crypto_orderbook__array_orderbook__test__quote_imbalance-2.snap  crypto_orderbook__array_orderbook__test__quote_imbalance.snap  crypto_orderbook__array_orderbook__test__roatating_price-10.snap  crypto_orderbook__array_orderbook__test__roatating_price-11.snap  crypto_orderbook__array_orderbook__test__roatating_price-12.snap  crypto_orderbook__array_orderbook__test__roatating_price-13.snap  (+16 more)
(+34 files in other folders)
