[package]
name = "freya_ob"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "orderbook_decimal"
harness = false

[[bench]]
name = "orderbook_fixed_decimal"
harness = false

[dependencies]
rust_decimal = { version = "1.36.0", optional = true }
rust_decimal_macros = { version = "1.36.0", optional = true }
serde = { version = "1.0.215", optional = true, features = ["derive"] }

[dev-dependencies]
divan = { version = "0.1.15" }
insta = { version = "1.41.1" }
rand = { version = "0.8.5" }
serde_json = { version = "1.0.132" }

[features]
fixed_decimal = []
rust_decimal = ["dep:rust_decimal"]
serde = ["dep:serde"]
